# visidata-pdr

./: .gitignore  .mailmap  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
sample_data/pds3_mer_rss_uhfd/: ODY2004050_S253.CSV  ODY2004050_S253.LBL
tests/: ody2004050_s253.vdj
tests/golden/: ody2004050_s253.tsv
visidata_pdr/: __init__.py  visidata_pdr.py
